<resources>
    <string name="app_name">OPG WebShop Admin</string>
    <string name="password_hint">Password</string>
    <string name="email_hit">Email</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="login">Login</string>
    <string name="enter_email">Please enter your email</string>
    <string name="enter_password">Please enter your password</string>
    <string name="password_short">Password to short</string>
    <string name="auth_failed">Autentification failed</string>
    <string name="user_not_exist">User don\'t exist or don\'t have administrator rights</string>
    <string name="title_activity_main_menu">MainMenu</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="actionBarProfil">Profile</string>
    <string name="actionBarAddress">Address</string>
    <string name="discount">Discount</string>
    <string name="my_orders">My Orders</string>
    <string name="news">News</string>
    <string name="about_us">About us</string>
    <string name="Signout">Signout</string>
    <string name="action_update">Update</string>
    <string name="action_delete">Delete</string>
    <string name="mesurment_unit">Unit:</string>
    <string name="price">Price:</string>
    <string name="txt_discount">Discount:</string>
    <string name="product_description">Description:</string>
    <string name="update_product">Update</string>
    <string name="btn_update">Update</string>
    <string name="selsect">Select</string>
    <string name="save">Save</string>
    <string name="name">Name</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="description">Description</string>
    <string name="unit">Unit</string>
    <string name="txt_price">Price</string>
    <string name="discount_enter">Discount</string>
    <string name="news_content">Content</string>
    <string name="news_heading">Heading</string>
    <string name="activities">Activities</string>
    <string name="goals">Goals</string>
    <string name="iban">Iban</string>
    <string name="txt_address">Address</string>
    <string name="phone">Phone</string>
    <string name="facebook">Facebook</string>
    <string name="order_number">Order number:</string>
    <string name="order_status">Order Status</string>
    <string name="total_items">Total Items:</string>
    <string name="total_price">Total price:</string>
    <string name="order_sent_small">Ordered</string>
    <string name="recieced">Mark as recieved</string>
    <string name="order_sent">ORDERED</string>
    <string name="order_recieved">RECIEVED</string>
    <string name="order_shipped">SHIPPED</string>
    <string name="product_txt">Products</string>
    <string name="user_info">User info</string>
    <string name="user_name">Name:</string>
    <string name="user_phone">Phone:</string>
    <string name="delivery_hedding">Delivery: </string>
    <string name="state_hedding">State: </string>
    <string name="City_hedding">City: </string>
    <string name="Postal_code_headding">Postal code:</string>
    <string name="street_heading">Street and house number:</string>
    <string name="payment_heading">Payment method</string>
    <string name="Comment_heading">Comment</string>
    <string name="total_heading">Total: </string>
    <string name="status_heading">STATUS:</string>
    <string name="price_per_unit">Price per unit:</string>
    <string name="quantity">Quantity:</string>
    <string name="new_orders">New orders</string>
    <string name="recieved_orders">Received orders</string>
    <string name="shipped">Mark as shipped</string>
    <string name="order_recieved_small">Received</string>
    <string name="shipped_orders">Shipped orders</string>
    <string name="username">Name</string>
    <string name="surname">Surname</string>
    <string name="phone_number">Phone</string>
    <string name="change_pass">Change Password</string>
    <string name="deleteAcc">Delete account</string>
    <string name="old_passwoed">Old password</string>
    <string name="new_password">New password</string>
    <string name="delete_user">Deleting user</string>
    <string name="delete_user_message">Are you sure you want to delete a user?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="user_deleted">User deleted</string>
    <string name="erorr">An error occurred</string>
    <string name="mailTitle" translatable="false">Opg WebShop</string>
    <string name="register_account">Register</string>
    <string name="is_admin">Admin account</string>
    <string name="rights">You don\'t have admin privileges</string>
    <string name="create_account">Create account</string>
    <string name="seccesful">Seccesful</string>
    <string name="Comments">No comments yet</string>
    <string name="comment">Comment</string>
    <string name="update_news">Update news</string>
    <string name="fill_informations">Please fill all informations</string>
    <string name="adding_news">Adding news</string>
    <string name="comment_add">Comment placed</string>
    <string name="no_comment">No comments yet</string>
    <string name="wrong_password_change">Something went wrong. Please try again later</string>
    <string name="password_changed">Password Successfully Modified</string>
    <string name="enter_new_password">Please enter new password</string>
    <string name="enter_comment">Please enter new comment</string>
    <string name="quant">Quantity</string>
    <string name="send_reset">We have sent you instructions to reset your password!</string>
    <string name="failed_send_reset">Failed to send reset email!</string>
    <string name="lbl_forgot_password">Forgot password</string>
    <string name="forgot_password_msg">We need your registered email to sent reset email</string>
    <string name="reset_btn">Reset</string>
    <string name="loginActivity">Login</string>
    <string name="profileActivity">Profile</string>
    <string name="change_passActivity">Change password</string>
    <string name="create_accountActivity">Create Account</string>
    <string name="reset_passwordActivity">Reset Password</string>
    <string name="add_categoryActivity">Add category</string>
    <string name="add_productActivity">Add product</string>
    <string name="commentActivity">Comments</string>
    <string name="order_detailActivity">Order Detail</string>
    <string name="productActivity">Products</string>
    <string name="update_aboutActivity">Update about</string>
    <string name="update_categoryActivity">Update category</string>
    <string name="update_productActivity">Update product</string>
    <string name="new_ordersActivity">New Orders</string>
    <string name="recieved_ordersActivity">Received orders</string>
    <string name="shipped_ordersActivity">Shipped orders</string>
    <string name="order_updated">Order was updated</string>
    <string name="order_notification_failed">Order was updated  but notification failed to send</string>
    <string name="your_order">Your order</string>
    <string name="updated_status">was updated</string>
    <string name="received">received</string>
    <string name="shipped_status">Shipped</string>
    <string name="wait">Please wait...</string>
    <string name="about_update">About Updated</string>
    <string name="news_added">News saved</string>
    <string name="news_updated">News updated</string>
    <string name="category_saved">Category saved</string>
    <string name="wrong">Somenthing wen\'t wrong</string>
    <string name="category_updated">Category updated</string>
    <string name="product_saved">Product saved</string>
    <string name="product_updated">Product updated</string>
    <string name="status_updated">Status updated</string>
    <string name="no_internet">No internet Connection</string>
    <string name="turn_on_internet">Please turn on internet connection to continue</string>
    <string name="internet_required">An internet connection is required.</string>
    <string name="profile_updated">Profile Updated</string>
    <string name="registrated_email">Enter your registered email</string>
    <string name="price_per_unt">Price per unit:</string>
    <string name="no_orders">No orders yet</string>
    <string name="order_cancel">Canceled</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_orders">Cancel orders</string>


</resources>
