<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@drawable/background">


    <android.support.v4.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#80000000"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".Categorys.AddCategory"
            tools:layout_editor_absoluteY="81dp">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="-8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="-8dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView">

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/txt_activities"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="-8dp"
                    android:hint="@string/activities"
                    android:inputType="text|textMultiLine"
                    app:met_singleLineEllipsis="false"
                    android:textSize="20sp"
                    app:met_baseColor="@android:color/white"
                    app:met_floatingLabel="highlight"
                    app:met_primaryColor="@color/Edit_txt_focus"
                    app:met_textColor="@android:color/white"
                    app:met_textColorHint="@android:color/white" />

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/txt_goals"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="-20dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="-8dp"
                    android:hint="@string/goals"
                    android:inputType="text|textMultiLine"
                    app:met_singleLineEllipsis="false"
                    android:textSize="20sp"
                    app:met_baseColor="@android:color/white"
                    app:met_floatingLabel="highlight"
                    app:met_primaryColor="@color/Edit_txt_focus"
                    app:met_textColor="@android:color/white"
                    app:met_textColorHint="@android:color/white" />

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/txt_iban"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="-20dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="-8dp"
                    android:hint="@string/iban"
                    android:inputType="text"
                    android:textSize="32sp"
                    app:met_baseColor="@android:color/white"
                    app:met_floatingLabel="highlight"
                    app:met_primaryColor="@color/Edit_txt_focus"
                    app:met_singleLineEllipsis="true"
                    app:met_textColor="@android:color/white"
                    app:met_textColorHint="@android:color/white" />

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/txt_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="-20dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="-8dp"
                    android:hint="@string/txt_address"
                    android:inputType="text|textMultiLine"
                    app:met_singleLineEllipsis="false"
                    android:textSize="32sp"
                    app:met_baseColor="@android:color/white"
                    app:met_floatingLabel="highlight"
                    app:met_primaryColor="@color/Edit_txt_focus"
                    app:met_textColor="@android:color/white"
                    app:met_textColorHint="@android:color/white" />

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/txt_Email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="-20dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="-8dp"
                    android:hint="@string/discount_enter"
                    android:inputType="text"
                    android:textSize="32sp"
                    app:met_baseColor="@android:color/white"
                    app:met_floatingLabel="highlight"
                    app:met_primaryColor="@color/Edit_txt_focus"
                    app:met_singleLineEllipsis="true"
                    app:met_textColor="@android:color/white"
                    app:met_textColorHint="@android:color/white" />

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/txt_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="-20dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="-8dp"
                    android:hint="@string/phone"
                    android:inputType="number"
                    android:textSize="32sp"
                    app:met_baseColor="@android:color/white"
                    app:met_floatingLabel="highlight"
                    app:met_primaryColor="@color/Edit_txt_focus"
                    app:met_singleLineEllipsis="true"
                    app:met_textColor="@android:color/white"
                    app:met_textColorHint="@android:color/white" />

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/txt_facebook"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="-20dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="-8dp"
                    android:hint="@string/facebook"
                    android:inputType="text"
                    android:textSize="32sp"
                    app:met_baseColor="@android:color/white"
                    app:met_floatingLabel="highlight"
                    app:met_primaryColor="@color/Edit_txt_focus"
                    app:met_singleLineEllipsis="true"
                    app:met_textColor="@android:color/white"
                    app:met_textColorHint="@android:color/white" />

                <info.hoang8f.widget.FButton
                    android:id="@+id/btn_save"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left|top"
                    android:layout_marginTop="15dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/save"
                    android:textColor="@android:color/white"
                    app:cornerRadius="4dp"
                    app:fButtonColor="@color/LoginButton"
                    app:shadowColor="@android:color/black"
                    app:shadowEnabled="true"
                    app:shadowHeight="5dp" />


            </LinearLayout>

        </android.support.constraint.ConstraintLayout>

    </android.support.v4.widget.NestedScrollView>

</RelativeLayout>